fix rating alignment

--- a/src/pages/HomeComponents/reviews.css
+++ b/src/pages/HomeComponents/reviews.css
@@ -108,6 +108,7 @@
   display: flex;
   flex-direction: column;
   align-self: start;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
